package challange;

public enum Cor {
    PRETO,BRANCO,COLORIDO
}
