package challange;

public class EstacionamentoException extends RuntimeException {

    public EstacionamentoException(String message) {
        super(message);
    }
}
